# cs674

./: .gitignore  CMakeLists.txt  README.md  ReadImage.cpp  histogram_specification.cpp
assignment_01/: CMakeLists.txt
assignment_01/include/: histogram.h  sample.h
assignment_01/report/: FraserLuke_AS01.tex
assignment_01/report/images/: boat_specification.pgm  f_16_specification.pgm  lenna_quantization128.pgm  lenna_quantization2.pgm  lenna_quantization32.pgm  lenna_quantization8.pgm  lenna_subsample128.pgm  lenna_subsample32.pgm  lenna_subsample64.pgm  peppers_quantization128.pgm  peppers_quantization2.pgm  peppers_quantization32.pgm  peppers_quantization8.pgm  peppers_subsample128.pgm  peppers_subsample32.pgm  peppers_subsample64.pgm
assignment_01/src/: histogram.cpp  histogram_equalization.cpp  histogram_specification.cpp  image_sampling.cpp  quantization.cpp  sample.cpp
assignment_02/: CMakeLists.txt
assignment_02/include/: spatial_filtering.h
assignment_02/report/: FraserLuke_AS02.tex
assignment_02/report/images/: correlation.pgm  laplacian_lenna.pgm  laplacian_sf.pgm  median_boat_15.pgm  median_boat_15_50.pgm  median_boat_7.pgm  median_boat_7_50.pgm  median_boat_average_15_30.pgm  median_boat_average_15_50.pgm  median_boat_average_7_30.pgm  median_boat_average_7_50.pgm  median_lenna_15.pgm  median_lenna_15_50.pgm  median_lenna_7.pgm  median_lenna_7_50.pgm  median_lenna_average_15_30.pgm  median_lenna_average_15_50.pgm  median_lenna_average_7_30.pgm  median_lenna_average_7_50.pgm  prewitt_lenna.pgm  prewitt_sf.pgm  smoothing_average_15.pgm  smoothing_average_7.pgm  smoothing_gaussian_15.pgm  smoothing_gaussian_7.pgm  smoothing_sf_average_15.pgm  smoothing_sf_average_7.pgm  smoothing_sf_gaussian_15.pgm  smoothing_sf_gaussian_7.pgm  sobel_lenna.pgm  sobel_sf.pgm  unsharp_highboost_f16_1-1.pgm  unsharp_highboost_lenna_1-3.pgm
assignment_02/src/: correlation.cc  median.cc  sharpening.cc  smoothing.cc  spatial_filtering.cc  unsharpHighBoost.cc
assignment_03/: CMakeLists.txt
assignment_03/include/: fft.h  fft_tools.h
assignment_03/report/: FraserLuke_AS03.tex
assignment_03/report/images/: lenna_mag_only.pgm  lenna_phase_only.pgm  rect_512_128x128.pgm  rect_512_128x128_FU.pgm  rect_512_128x128_FU_centered.pgm  rect_512_32x32.pgm  rect_512_32x32_FU.pgm  rect_512_32x32_FU_centered.pgm  rect_512_64x64.pgm  rect_512_64x64_FU.pgm  rect_512_64x64_FU_centered.pgm
assignment_03/src/: experiment1.cc  experiment2.cc  experiment3.cc  fft.cc  fft_tools.cc  plot1dsignal.py
assignment_04/: CMakeLists.txt
assignment_04/include/: fft.h  fft_tools.h  restoration_tools.h  spatial_filtering.h
assignment_04/report/: FraserLuke_A04.tex
assignment_04/report/images/: FT_boy_noisy.pgm  boy_denoise.pgm  boy_noisy.pgm  filter.pgm  girl_homo_0.2_1.2_1.8.pgm  girl_homo_0.2_1.8_1.8.pgm  girl_homo_0.3_1.2_1.8.pgm  girl_homo_0.4_1.2_1.8.pgm  girl_homo_0.5_1.2_1.8.pgm  girl_homo_0.8_1.3_1.8.pgm  girl_homo_0.8_1.4_1.8.pgm  girl_homo_0.8_1.5_1.8.pgm  girl_homo_0.8_1.6_1.8.pgm  girl_homo_0.8_1.8_1.8.pgm  girl_homo_0_8_1_2_1_8.pgm  girl_homo_1.8_0.8_1.8.pgm  lenna_blur_0015.pgm  lenna_blur_10.pgm  (+14 more)
assignment_04/src/: convolution_freq.cc  fft_tools.cc  homomorphic.cc  motionblur.cc  noise_removal.cc  restoration_tools.cc  spatial_filtering.cc
(+12 files in other folders)
